src/test/ui/wf/wf-trait-fn-ret.stderr
error[E0277]: the trait bound `Self: Eq` is not satisfied
  --> $DIR/wf-trait-fn-ret.rs:10:22
   |
LL | struct Bar<T:Eq+?Sized> { value: Box<T> }
   |              -- required by this bound in `Bar`
...
LL |     fn bar(&self) -> &Bar<Self>;
   |                      ^^^^^^^^^^ the trait `Eq` is not implemented for `Self`
   |
help: consider further restricting `Self`
   |
LL |     fn bar(&self) -> &Bar<Self> where Self: Eq;
   |                                 ^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
